# jotihunt

./: .gitignore  Cargo.toml  data_merge.py  flake.nix  todo.md
.cargo/: config.toml
.github/workflows/: main.yml
client/: Cargo.toml  index.html  index.scss  leaflet.js
client/src/: articles.rs  comms.rs  leaflet.rs  main.rs  options.rs  state.rs  update.rs
server/: Cargo.toml
server/src/: article.rs  geojson.rs  main.rs  status.rs
shared/: Cargo.toml
shared/src/: domain.rs  lib.rs
src/: main.rs
