[package]
name = "jotihunt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Geolocation", "Navigator", "Window"] }
sycamore = {version="0.8.1", features= ["suspense"]}
gloo = "0.8.0"
mk-geolocation = {git = "https://gitlab.com/mkroehnert/mk-geolocation"}
serde = "1.0.144"
postcard = {version ="1.0.2", default-features=false, features=["use-std"]}
futures = {version = "0.3.24", default-features=false}