[package]
name = "jotihunt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures-util = { version = "0.3.24", default-features = false }
async-stream = "0.3.3"
jotihunt-shared = { path = "../shared" }
serde = { version = "1.0.144", features = ["derive"] }
postcard = { version = "1.0.2", features = ["use-std"], default-features = false }
sled = { version = "0.34.7" }
uuid = { version = "1.1.2", features = ["serde"], default-features = false }

axum = { version = "0.7.7", features = ["ws", "query"], default-features = false }
# hyper = { version = "0.14", features = ["http1", "http2", "tcp", "client"], default-features = false }
tokio = { version = "1.21.1", features = ["rt-multi-thread", "sync"], default-features = false }
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.6.1", features = ["cors", "request-id", "auth"], default-features = false }
axum-server = { version = "0.7.1", features = ["tls-rustls"], default-features = false }
clap = { version = "4.0.10", features = ["derive", "std"], default-features = false }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
arc-swap = "1.6.0"